# nengo-dl-torch

./: README.md  REFERENCE.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/examples/: from-nengo-executed.ipynb  from-nengo.ipynb  from-pytorch.ipynb  learned-integrator.ipynb  lmu.ipynb  lmu.py  mnist_params_pt.npz  mnist_params_pt_full.npz  mnist_params_pt_online_scale.npz  pytorch-models.ipynb  pytorch-models.py  pytorch-to-snn.ipynb  pytorch-to-snn.py  spa-memory.ipynb  spa-memory.py  spa-retrieval.ipynb  spa-retrieval.py  spiking-mnist-executed.ipynb  spiking-mnist.ipynb
docs/examples/.ipynb_checkpoints/: from-nengo-checkpoint.ipynb  from-pytorch-checkpoint.ipynb  from-pytorch-executed-checkpoint.ipynb  spiking-mnist-checkpoint.ipynb  spiking-mnist-executed-checkpoint.ipynb
nengo_dl/: __init__.py  benchmarks.py  builder.py  compat.py  config.py  converter.py  dists.py  graph_optimizer.py  losses.py  neuron_builders.py  neurons.py  op_builders.py  process_builders.py  signals.py  simulator.py  tensor_graph.py  tensor_node.py  utils.py  version.py
nengo_dl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nengo_dl/tests/: conftest.py  dummies.py  test_benchmarks.py  test_builder.py  test_compat.py  test_config.py  test_converter.py  test_dists.py  test_graph_optimizer.py  test_keras.py  test_learning_rules.py  test_losses.py  test_nengo_tests.py  test_neurons.py  test_objectives.py  test_op_builders.py  test_processes.py  test_setup.py  test_signals.py  test_simulator.py  test_tensor_graph.py  test_tensor_node.py  test_testing.py  test_transforms.py  test_utils.py  test_version.py
