[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nengo-dl"
version = "1.0.0"
description = "PyTorch backend for Nengo deep learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache 2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Nengo",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "nengo>=3.0",
    "torch>=1.9",
    "numpy>=1.19",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov"]
docs = ["sphinx", "nbsphinx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nengo_dl*"]

[tool.pytest.ini_options]
testpaths = ["nengo_dl/tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
