[metadata]
name = nengo-dl
version = 1.0.0
description = PyTorch backend for Nengo deep learning
long_description = file: README.rst
long_description_content_type = text/x-rst
author = nengo-dl contributors
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Framework :: Nengo
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    nengo>=3.0
    torch>=1.9
    numpy>=1.19

[options.extras_require]
tests =
    pytest
    pytest-cov
docs =
    sphinx
    nbsphinx

[tool:pytest]
testpaths = nengo_dl/tests
addopts = -v --tb=short
filterwarnings =
    ignore::DeprecationWarning
    ignore::UserWarning
